crates/toml_edit/tests/fixtures/invalid/string-byte-escapes.stderr
TOML parse error at line 1, column 12
  |
1 | answer = "\x33"
  |            ^
Unexpected `x`
While parsing escape sequence
While parsing a Basic String
